style.css
body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    padding: 0 5% 10%;
    box-sizing: border-box;
    color: #2A2B2A;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 0;
}

.nav-items {
    display: flex;
    align-items: center;
    gap: 20px;
}

.hero {
    height: 300px;
    overflow-y: hidden;
    border-radius: 16px;
    margin-bottom: 5%;
    background-image: url(images/store.jpg);
    background-size: cover;
    background-position: center;
}

.hero-img {
    width: 100%;
    object-fit: cover;
}

.search-bar {
    padding: 10px;
    border: 0px solid #ddd;
    border-radius: 12px;
    font-size: 1em;
    background-color: #f6f6f6;
    width: 200px;
}

.icon {
    color: #2A2B2A;
    font-size: 1.2em;
    text-decoration: none;
    display: flex;
    align-items: center;
    justify-content: center;
}

.icon:hover {
    color: #267b3a;
    transition: color 0.3s;
}

.logo {
    width: 50px;
}

.categories {
    display: flex;
    gap: 20px;
    padding-bottom: 10px;
    scroll-snap-type: x mandatory;
    overflow-x: auto;
    scroll-snap-type: x mandatory;
    -ms-overflow-style: none;
    /* Hide scrollbar in Internet Explorer */
    scrollbar-width: none;
    /* Hide scrollbar in Firefox */
    scroll-behavior: smooth;
    padding: 2% 4%;
}

h2 {
    margin: 0%;
    padding-bottom: 2%;
}

.category-section {
    padding: 5% 0%;
    border-radius: 16px;
    display: flex;
    flex-direction: column;
    background-color: #f6f6f6;
    overflow-x: hidden;
}

.categories-wrapper {
    display: flex;
    align-items: center;
    position: relative;
}

.scroll-btn {
    background-color: white;
    border: none;
    font-size: 24px;
    color: #2A2B2A;
    cursor: pointer;
    z-index: 1;
    padding: 10px;
    transition: opacity 0.3s;
    border-radius: 200px;
    margin: 2%;
}

.scroll-btn:hover {
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    transition: transform 0.3s, border 0.3s;
    scale: 1.05;
}

.category-card {
    width: 100%;
    height: auto;
    border-radius: 16px;
    background-color: white;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    text-align: center;
    transition: transform 0.3s, border 0.3s;
    text-decoration: none;
    padding: 0px 15px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.category-card img {
    width: 100%;
    height: auto;
    border-radius: 16px;
    margin-bottom: 10px;
    display: none;
}

.category-card p {
    font-weight: bold;
    color: #45a049;
    margin: 0px;
}

.category-card.active {
    border: 2px solid #8bb194;

}

.category-card:hover {
    transform: scale(1.05);
}

.products-section {
    padding: 5% 0%;
}


.products {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 5%;
}

.product-card {
    background-color: #f6f6f6;
    border-radius: 16px;
    text-align: center;
    transition: box-shadow 0.3s ease;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    text-decoration: none;
}

.product-card:hover {
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
    transform: translateY(-5px);
    transition: transform 0.3s, box-shadow 0.3s;
    cursor: pointer;
}

.product-card img {
    width: 100%;
    border-radius: 16px 16px 0% 0%;
    height: fit-content;
    object-fit: cover;
    padding-bottom: 4%;
}

.product-card h4 {
    font-size: 1.2em;
    color: #2f8f46;
    margin-bottom: 10px;
}

.product-card a {
    text-decoration: none;
    color: #2f8f46;
}

.product-card p {
    font-size: 0.9em;
    color: #555;
    margin: 0 0 12px 0;

}

/* Product Page */
.h3 {
    margin: 0%;
}

.product-container {
    display: flex;
    flex-direction: column;
    gap: 5%;
    align-items: center;
    padding: 10% 0%;
    height: 100%;

}

.product-image {
    align-items: center;
    height: 100%;
    width: 100%;
    padding-bottom: 10%;
    justify-content: center;
}

.product-image img {
    max-width: 100%;
    height: 100%;
    border-radius: 16px;
    align-self: center;
    object-fit: cover;

}


.product-details {
    gap: 10%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.product-details h1 {
    font-size: 2em;
    color: #333;
    margin: 0%;
    padding-top: 0%;
}

.product-price {
    font-size: 1.5em;
    color: #333;
    margin: 0%;
    padding-top: 5%;
    font-weight: bold;

}

.product-description {
    color: #555;
    font-size: 1em;
    line-height: 1.5;
    margin: 0%;
    padding: 5% 0%;

}

.final-price {
    font-size: 1.5em;
    color: #333;
    margin: 0%;
    margin-bottom: 2em;
    font-weight: bold;
}

.product-options div {
    display: flex;
    padding-bottom: 5%;
    flex-direction: column;
    align-items: center;
}

label {
    font-size: 0.8em;
    color: #333;
    padding-bottom: 2%;
    text-align: left;
    width: 100%;
}


.btn {
    display: inline-block;
    padding: 10px 0px;
    width: 100%;
    font-size: 1.1em;
    color: #fff;
    background-color: #2f8f46;
    border: none;
    border-radius: 12px;
    text-align: center;
    text-decoration: none;
    transition: background-color 0.3s;
    cursor: pointer;
}

.btn:hover {
    background-color: #267b3a;
}


/* related products */
.related-products {
    padding: 5% 0%;
    display: flex;

    gap: 5%;
}

.related-products .products {
    width: 100%;
}

/* Profile & Signup Form */
.signup-container {
    background-color: #ffffff;
    width: 100%;
    max-width: 400px;
    padding: 20px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    border-radius: 10px;
    text-align: center;

}

.profile-info p {
    font-size: 1em;
    color: #333;
    margin-bottom: 0%;

}

.profile-info p span {
    font-weight: bold;
}

.signup-container h2 {
    font-size: 24px;
    color: #333;
    margin-bottom: 20px;
}

.signup-form {
    display: flex;
    flex-direction: column;
}

.form-group {
    margin-bottom: 15px;
    text-align: left;
}

.form-group label {
    font-size: 0.8em;
    color: #333;
    margin-bottom: 2%;
    text-align: left;
}



.form-group input,
textarea,
.form-group select {
    width: 100%;
    /* Make the input, textarea, and select take up 100% of the container */
    padding: 10px;
    /* Padding inside the elements */
    max-width: 100%;
    /* Ensure they don't exceed the container's width */
    margin-bottom: 10px;
    /* Add some space below each element */

    border: 0px solid #ddd;
    /* Define border color */
    border-radius: 12px;
    /* Rounded corners */
    background-color: #f6f6f6;
    /* Light background color */

    box-sizing: border-box;
    /* Include padding and border in the element's total width */
}



.alert-danger {
    color: red;
    font-size: 0.8em;
    text-align: left;
    width: 100%;
    padding-top: 5px;
}

.alert-success {
    color: green;
    font-size: 0.8em;
    text-align: left;
    width: 100%;
    padding-top: 5px;
}

.padding {
    padding-top: 5%;
}

/* Buttons */
.btn {
    display: inline-block;
    padding: 10px 0px;
    width: 100%;
    font-size: 1.1em;
    color: #fff;
    background-color: #2f8f46;
    border: none;
    border-radius: 12px;
    text-align: center;
    text-decoration: none;
    transition: background-color 0.3s;
    cursor: pointer;
}

.btn-admin {
    margin: 5% 0%;
}

.btn:hover {
    background-color: #267b3a;
}

.signup-btn {
    background-color: #4CAF50;
    color: #fff;
    padding: 10px 0;
    font-size: 16px;
    border: none;
    border-radius: 12px;
    cursor: pointer;
    transition: background-color 0.3s;
}

.signup-btn:hover {
    background-color: #45a049;
}

/* Admin Page */
.admin-section {
    background-color: #f6f6f6;
    border-radius: 16px;
    padding: 5%;
    margin-bottom: 5%;
}

.admin-options input[type="text"],
.admin-options select,
.admin-options input[type="number"],
.admin-options textarea {
    background-color: #ffffff;
}

/* Responsive */
@media (min-width: 650px) {
    .product-container {
        flex-direction: row;
        align-items: flex-start;

    }

    .product-image {
        padding-bottom: 0%;
        width: 60%;

    }

    .product-details {
        width: 40%;
    }

    .category-card {
        padding: 16px;

    }

    .category-card img {
        display: block;
    }

    .admin-options {
        display: flex;
        gap: 10%;
    }

    .admin-options div {
        display: flex;
        flex-direction: column;
        width: 50%;
    }
}

